Fix scrollbar when not needed

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -15,7 +15,7 @@
 }
 
 .section-content-floating {
-    @apply p-4 rounded-lg bg-gray-100 dark:bg-gray-800 shadow-lg max-h-96 overflow-scroll
+    @apply p-4 rounded-lg bg-gray-100 dark:bg-gray-800 shadow-lg max-h-96 overflow-y-auto
 }
 
 .section-heading {
